  * New function starpu_task_set() similar as starpu_task_build() but
    with a task object given as the first parameter
  * New functions
    starpu_data_partition_submit_sequential_consistency() and
    starpu_data_unpartition_submit_sequential_consistency()
  * Add a new value STARPU_TASK_SYNCHRONOUS to be used in
    starpu_task_insert() to define if the task is (or not) synchronous

Changes:
  * Vastly improve simgrid simulation time.
  * Switch default scheduler to lws.
  * Add "to" parameter to pull_task and can_push methods of components.
  * Deprecate handle_to_pointer interface operation in favor of new to_pointer
  operation.

Small changes:
  * Use asynchronous transfers for task data fetches with were not prefetched.
  * Allow to call starpu_sched_ctx_set_policy_data on the main
    scheduler context
  * Fonction starpu_is_initialized() is moved to the public API.

StarPU 1.2.5 (git revision xxx)
==============================================

Small features:
  * Add a new value STARPU_TASK_COLOR to be used in
    starpu_task_insert() to pick up the color of a task in dag.dot

StarPU 1.2.4 (git revision 255cf98175ef462749780f30bfed21452b74b594)
==============================================

Small features:
   * Catch of signals SIGINT and SIGSEGV to dump fxt trace files.
   * New configure option --disable-icc to disable the compilation of
     specific ICC examples
   * Add starpu_codelet_pack_arg_init, starpu_codelet_pack_arg,
     starpu_codelet_pack_arg_fini for more fine-grain packing capabilities.
   * Add starpu_task_insert_data_make_room,
     starpu_task_insert_data_process_arg,
     starpu_task_insert_data_process_array_arg,
     starpu_task_insert_data_process_mode_array_arg
   * Do not show internal tasks in fxt dag by default. Allow to hide
     acquisitions too.
   * Add a way to choose the dag.dot colors.


StarPU 1.2.3 (svn revision 22444)
==============================================

New features:
  * Add per-node MPI data.
