@@ -94,6 +94,7 @@ Small features:
     starpu_data_unpartition_submit_sequential_consistency()
   * Add a new value STARPU_TASK_SYNCHRONOUS to be used in
     starpu_task_insert() to define if the task is (or not) synchronous
+  * Add memory states events in the traces.
 
 Changes:
   * Vastly improve simgrid simulation time.
